# mcpscan

./: .gitattributes  .gitignore  .mcpscanignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ci.yml  release.yml
mcpscan/: __init__.py  __main__.py  cli.py  discover.py  drift.py  findings.py  fixer.py  loaders.py  mcp_server.py  owasp.py  report.py  scanner.py  suppress.py
mcpscan/rules/: __init__.py  auth_gaps.py  base.py  command_injection.py  debug_endpoint.py  hooks.py  insecure_deser.py  insecure_transport.py  path_traversal.py  permissions.py  sdk_versions.py  secrets.py  ssrf.py  tool_annotations.py  tool_poisoning.py  webfetch_domain.py  workflow_injection.py
tests/: test_debug_endpoint.py  test_discover.py  test_drift.py  test_mcp_server.py  test_scanner.py  test_workflow_injection.py
tests/fixtures/clean/: claude_desktop_config.json  mcp.json  server.py
tests/fixtures/clean/.claude/: settings.json
tests/fixtures/clean/.github/workflows/: ci.yml  comment-bot.yml  release_scoped_permissions.yml  workflow_run_artifact.yml
tests/fixtures/vulnerable/: claude_desktop_config.json  mcp.json  package.json  server.py
tests/fixtures/vulnerable/.claude/: settings.json
tests/fixtures/vulnerable/.github/workflows/: release_no_permissions.yml  secrets_reach.yml  triage.yml  workflow_run_artifact.yml
